<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.app.presentation.view.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="@color/white"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_search_user"
            style="@style/search_medium_16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/search_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@={vm.searchQuery}"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="@id/ib_back"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/ib_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@color/light_gray"
            android:src="@drawable/ic_search_purple"
            app:layout_constraintBottom_toBottomOf="@id/et_search_user"
            app:layout_constraintEnd_toEndOf="@id/et_search_user"
            app:layout_constraintTop_toTopOf="@id/et_search_user"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_recent_search"
            style="@style/search_semibold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/search_recent_search_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_back" />

        <TextView
            android:id="@+id/tv_delete_all_keywords"
            style="@style/detail_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/search_delete_all_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_recent_search"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recent_search"
            app:submitList="@{vm.recentSearches}"
            tools:listitem="@layout/item_searches" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>