<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.app.presentation.view.detail.DetailViewModel" />

        <variable
            name="itemClickListener"
            type="com.example.app.presentation.view.ItemClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/logo_github"
            app:layout_constraintBottom_toBottomOf="@id/tb_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tb_main"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/toolbar_semibold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/detail_toolbar"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <ImageButton
            android:id="@+id/ib_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/light_gray"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp"
            app:imageUrl="@{vm.userDetailInfo.profile}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_main"
            tools:src="@drawable/ic_launcher_background" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/detail_profile_link_description"
            android:onClick="@{() -> itemClickListener.onSelected(vm.userDetailInfo.profileUrl)}"
            android:src="@drawable/ic_link"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_user_id"
            style="@style/detail_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@{vm.userDetailInfo.userId}"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile"
            tools:text="HamBeomJoon" />

        <TextView
            android:id="@+id/tv_user_location"
            style="@style/search_medium_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@{vm.userDetailInfo.location}"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_id"
            tools:text="Seoul, Korea" />

        <TextView
            android:id="@+id/tv_repos"
            style="@style/detail_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/detail_repo_list"
            android:textColor="@color/kotlin_purple"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_repos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_repos"
            app:submitList="@{vm.userRepos}"
            tools:listitem="@layout/item_repository" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>